// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an error when there is an error 1`] = `
<div>
  <div
    class="sui-search-error"
  >
    I am an error
  </div>
</div>
`;

exports[`renders children when there is no error 1`] = `
<div>
  <div>
    Child
  </div>
</div>
`;
